package abstracts

interface Closable {
    fun close()
}