package com.company

class Action(val description: String, val quality: Quality)