package com.company

class Decision(val decision: String)