package abstracts;
import types.Color;

public interface Paintable {
    void paint(Color color);
}
