package com.company;

public class Command {

    private final String description;

    public Command(String description) {
        this.description = description;
    }

    public String getDescription() {
        return description;
    }
}
