package com.company;

public class Quality {

    private final String description;

    public Quality(String description) {
        this.description = description;
    }

    public String getDescription() {
        return description;
    }
}
